adds animals to form

--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
       </h1>
       <hr />
       <!--Add your form below:-->
+      <form action="story.html" method="GET">
+        <label for="animal-1">Animal:</label>
+        <input type="text" id="animal-1" name="animal-1" required />
+        <br />
+        <label for="animal-2">Another Animal:</label>
+        <input type="text" id="animal-2" name="animal-2" required />
+        <br />
+        <label for="animal-3">One More Animal:</label>
+        <input type="text" id="animal-3" name="animal-3" required />
+        <br />
+        <label for="adj-1">Adjective (past tense):</label>
+        <input type="text" id="adj-1" name="adj-1" required />
+        <input type="submit" value="Form My Story!" />
+      </form>
     </section>
   </body>
 </html>
