--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <br />
         <label for="adj-1">Adjective (past tense):</label>
         <input type="text" id="adj-1" name="adj-1" required />
+        <br />
+        <label for="verb-1">Verb (ends in -ing):</label>
+        <input type="text" id="verb-1" name="verb-1" required />
+        <br />
+        <label for="num-1">Number:</label>
         <input type="submit" value="Form My Story!" />
       </form>
     </section>
