adds a number input

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <input type="text" id="verb-1" name="verb-1" required />
         <br />
         <label for="num-1">Number:</label>
+        <input type="number" id="num-1" name="num-1" required />
+        <br />
         <input type="submit" value="Form My Story!" />
       </form>
     </section>
