--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <label for="num-1">Number:</label>
         <input type="number" id="num-1" name="num-1" required />
         <br />
+        <span>Yes or No:</span>
+        <input type="radio" id="yes" name="answer" value="yes" required />
+        <label for="yes">Yes</label>
+        <input type="radio" id="no" name="answer" value="no" required />
+        <label for="no">No</label>
+        <br />
         <input type="submit" value="Form My Story!" />
       </form>
     </section>
