adds dropdown with speed options

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <input type="radio" id="no" name="answer" value="no" required />
         <label for="no">No</label>
         <br />
+        <label for="speed">Relative speed (endsin -er):</label>
+        <select name="speed" id="speed" required>
+          <option value="faster">Faster</option>
+          <option value="slower">Slower</option>
+        </select>
+        <br />
         <input type="submit" value="Form My Story!" />
       </form>
     </section>
