--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
         </datalist>
         <br />
         <label for="message">Meaningful Message:</label>
-        <textarea name="message" id="message" cols="40" rows="8"></textarea>
+        <textarea
+          name="message"
+          id="message"
+          cols="40"
+          rows="8"
+          placeholder="Slow and steady wins the race."
+        ></textarea>
         <br />
         <input type="submit" value="Form My Story!" />
       </form>
