changes some of the page info, changes font

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <section id="main">
       <h1>
-        Complete the Form -<br />
-        Complete the Story!
+        Write your own fable by filling in the information below. Submit the
+        form and read your fable!
       </h1>
       <hr />
       <!--Add your form below:-->
