--- a/story.html
+++ b/story.html
@@ -5,6 +5,10 @@
     <title>Completed Story</title>
     <script type="text/javascript" src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section id="top">
